--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "author": "John Curcio",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.20.0"
+    "express": "^4.20.0",
+    "cors": "^2.8.5",
+    "body-parser": "^1.19.0"
   }
 }
